--- a/static/main/main.css
+++ b/static/main/main.css
@@ -15,12 +15,12 @@ body {
 	padding-bottom: 48px;
 	width: 566px;
 	height: 1086px;
+	margin-bottom: 42px;
 }
 .container {
-	background-color: white;
 	padding: 20px;
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Card-style container */
+	/* border-radius: 5px; */
+	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); Card-style container */
 	height: 95%;
 	width: 90%;
 	display: flex;
@@ -129,6 +129,7 @@ body {
 	position: fixed;
 	top: 20px;
 	right: 36px;
+	display: none;
 }
 
 .sidebar-menu li a {
@@ -184,10 +185,10 @@ body {
 }
 
 .container {
-	background-color: white;
+	/* background-color: white; */
 	padding: 20px;
-	border-radius: 5px;
-	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	/* border-radius: 5px;
+	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
 	height: auto; /* Adjusted for responsiveness */
 	width: 100%; /* Adjusted for responsiveness */
 	max-width: 540px; /* Maximum width */
@@ -228,7 +229,7 @@ body {
 	.container {
 		width: 100%;
 		max-width: none;
-		height: 100%;
+		height: 94%;
 	}
 
 	#btnUpload {
