--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -8,6 +8,7 @@
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 			rel="stylesheet" />
 		<link rel="stylesheet" href="/static/main/main.css" />
+		<link rel="stylesheet" href="/static/main/app.css" />
 	</head>
 	<body>
 		<div id="sidebar" class="sidebar">
@@ -31,7 +32,7 @@
 
 		<div class="main-content">
 			<div class="container">
-				<h2 class="text-center">Book Predict</h2>
+				<!-- <h2 class="text-center">Book Predict</h2> -->
 				<form id="uploadForm" enctype="multipart/form-data">
 					<div class="form-group">
 						<input
@@ -65,6 +66,34 @@
 				</div>
 
 				<div id="responseArea" class="response-area mt-3"></div>
+				<div class="bottom-appbar">
+					<div class="tabs">
+						<div
+							class="tab is-active tab--left"
+							onclick="redirect('search-books')">
+							<img src="/static/main/search.svg" alt="Search" />
+							<span>Search</span>
+						</div>
+						<div class="tab tab--fab" onclick="redirect('main')">
+							<div class="top">
+								<div class="fab">
+									<img src="/static/main/camera.svg" alt="Add" />
+								</div>
+							</div>
+						</div>
+						<div class="tab tab--right" onclick="redirect('user-profile')">
+							❤️️
+							<span>Profile</span>
+						</div>
+					</div>
+				</div>
+				<script>
+					function redirect(page) {
+						window.location
+							? (window.location.href = `/${page}`)
+							: window.location.replace(`/${page}`);
+					}
+				</script>
 			</div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
