--- a/templates/search.html
+++ b/templates/search.html
@@ -11,9 +11,11 @@
 		<link rel="stylesheet" href="/static/search/main.css" />
 	</head>
 	<body>
-		<div class="c-searchbar">
-			<input type="text" id="searchQuery" placeholder="Search for books..." />
-			<button id="searchButton">Search</button>
+		<div class="c-searchbox">
+			<div class="c-searchbar">
+				<input type="text" id="searchQuery" placeholder="Search for books..." />
+				<button id="searchButton">Search</button>
+			</div>
 		</div>
 
 		<div id="searchResults"></div>
