--- a/static/main/app.css
+++ b/static/main/app.css
@@ -2,7 +2,9 @@
 	max-width: 400px;
 	margin: 0px auto;
 }
-
+.disable-dbl-tap-zoom {
+	touch-action: manipulation;
+}
 .page {
 	width: 100vw;
 	height: 100vh;
