--- a/static/main/app.css
+++ b/static/main/app.css
@@ -99,3 +99,39 @@
 	justify-content: center;
 	transform: translate(2px, -60%);
 } /*# sourceMappingURL=app.css.map */
+.profile-popup {
+	position: absolute;
+	bottom: 74px; /* Height of the bottom bar */
+	right: 10px; /* Adjust based on your layout */
+	background-color: #fff;
+	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+	border-radius: 5px;
+	z-index: 9999;
+}
+
+.profile-popup ul {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	z-index: 9999;
+}
+
+.profile-popup ul li {
+	padding: 4px;
+	border-bottom: 1px solid #eee;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	z-index: 9999;
+}
+
+.profile-popup ul li:last-child {
+	border-bottom: none;
+	z-index: 9999;
+}
+
+.profile-popup ul li:hover {
+	background-color: #f5f5f5;
+	cursor: pointer;
+	z-index: 9999;
+}
