--- a/templates/profile.html
+++ b/templates/profile.html
@@ -14,7 +14,7 @@
 		<style></style>
 	</head>
 	<body>
-		<div class="container mt-3">
+		<div class="container mt-3 book-container">
 			<h1 class="text-center mb-4">Your Rated Books</h1>
 			<div id="ratedBooks" class="row">
 				<!-- Book items will be inserted here by JavaScript -->
