--- a/static/history/main.css
+++ b/static/history/main.css
@@ -1,3 +1,37 @@
+:root {
+	/* Light theme variables */
+	--background-color: #f7f7f7;
+	--text-color: #333;
+	--secondary-text-color: #666;
+	--container-background-color: #ffffff;
+	--button-background-color: #007bff;
+	--button-hover-background-color: #0056b3;
+	--rating-section-background-color: #f0f0f0;
+	--rating-button-background-color: #4caf50;
+	--rating-button-hover-background-color: #43a047;
+	--link-background-color: #2196f3;
+	--link-hover-background-color: #1e88e5;
+	--border-color: #ccc;
+	--box-shadow-color: rgba(0, 0, 0, 0.1);
+}
+
+[data-theme='dark'] {
+	/* Dark theme variables */
+	--background-color: #121212;
+	--text-color: #ccc;
+	--secondary-text-color: #888;
+	--container-background-color: #242424;
+	--button-background-color: #343a40;
+	--button-hover-background-color: #495057;
+	--rating-section-background-color: #333;
+	--rating-button-background-color: #388e3c;
+	--rating-button-hover-background-color: #2e7d32;
+	--link-background-color: #1976d2;
+	--link-hover-background-color: #1565c0;
+	--border-color: #555;
+	--box-shadow-color: rgba(255, 255, 255, 0.1);
+}
+
 body {
 	font-family: Arial, sans-serif;
 	padding: 20px;
@@ -5,25 +39,6 @@ body {
 }
 .container {
 	margin-bottom: 100px;
-}
-#searchQuery {
-	width: calc(100% - 120px);
-	padding: 10px;
-	margin-right: 5px;
-	border-radius: 4px;
-	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-	border: 0px;
-}
-#searchButton {
-	padding: 10px;
-	background-color: #007bff;
-	color: white;
-	border: none;
-	border-radius: 4px;
-	cursor: pointer;
-}
-#searchButton:hover {
-	background-color: #0056b3;
 }
 #searchResults {
 	margin-top: 20px;
@@ -119,21 +134,70 @@ body {
 	overflow: scroll;
 }
 
-.c-searchbar {
-	display: flex;
-	align-items: center;
-	position: fixed; /* Fixed positioning */
-	bottom: 70px; /* Height of the bottom app bar */
-	width: 100%; /* Full width */
-	margin: 0 auto; /* Center the search bar */
-	padding: 10px 0; /* Add some padding */
-	z-index: 999; /* Ensure it's above other content but below the overlaying bottom app bar */
-	max-width: 500px;
-	bottom: 110px;
+body {
+	font-family: Arial, sans-serif;
+	color: var(--text-color);
+	padding: 20px;
+	background-color: var(--background-color);
 }
 
-.c-searchbox {
-	width: 90vw; /* You may want to adjust this to less than 100% to give some padding */
-	max-width: 500px; /* Adjust as needed */
-	margin: 0 auto; /* This will center the search box */
+.container {
+	margin-bottom: 100px;
+}
+
+.book,
+.book-card {
+	background-color: var(--container-background-color);
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px var(--box-shadow-color);
+}
+
+.book h4,
+.book-title {
+	margin: 0;
+	color: var(--text-color);
+}
+
+.book p,
+.book-author,
+.book-info p {
+	color: var(--secondary-text-color);
+}
+
+.rating-section {
+	background-color: var(--rating-section-background-color);
+	padding: 10px;
+	border-radius: 4px;
+	margin-top: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.rating-section button {
+	background-color: var(--rating-button-background-color);
+	color: white;
+}
+
+.rating-section button:hover {
+	background-color: var(--rating-button-hover-background-color);
+}
+
+.more-info-link {
+	padding: 10px 15px;
+	background-color: var(--link-background-color);
+	color: white;
+	text-decoration: none;
+	border-radius: 4px;
+}
+
+.more-info-link:hover {
+	background-color: var(--link-hover-background-color);
+}
+
+.c-description {
+	max-height: 120px;
+	overflow: scroll;
 }
