--- a/static/search/main.css
+++ b/static/search/main.css
@@ -1,3 +1,35 @@
+:root {
+	/* Existing variables for light theme */
+	--background-color: #f7f7f7;
+	--text-color: #000;
+	--container-background-color: #fff;
+	--button-background-color: #007bff;
+	--button-hover-background-color: #0056b3;
+	--box-shadow-color: rgba(0, 0, 0, 0.1);
+	--border-color: #ccc; /* New */
+	--rating-background-color: #f0f0f0; /* New */
+	--rating-button-background-color: #4caf50; /* New */
+	--rating-button-hover-background-color: #43a047; /* New */
+	--more-info-link-background-color: #2196f3; /* New */
+	--more-info-link-hover-background-color: #1e88e5; /* New */
+}
+
+[data-theme='dark'] {
+	/* Dark theme colors */
+	--background-color: #242424;
+	--text-color: #fff;
+	--container-background-color: #242424;
+	--button-background-color: #343a40;
+	--button-hover-background-color: #495057;
+	--box-shadow-color: rgba(255, 255, 255, 0.1);
+	--border-color: #555; /* Dark theme adjusted */
+	--rating-background-color: #333; /* Dark theme adjusted */
+	--rating-button-background-color: #388e3c; /* Dark theme adjusted */
+	--rating-button-hover-background-color: #2e7d32; /* Dark theme adjusted */
+	--more-info-link-background-color: #1976d2; /* Dark theme adjusted */
+	--more-info-link-hover-background-color: #1565c0; /* Dark theme adjusted */
+}
+
 body {
 	font-family: Arial, sans-serif;
 	padding: 20px;
@@ -119,18 +151,88 @@ body {
 .c-searchbar {
 	display: flex;
 	align-items: center;
-	position: fixed; /* Fixed positioning */
-	bottom: 70px; /* Height of the bottom app bar */
-	width: 100%; /* Full width */
-	margin: 0 auto; /* Center the search bar */
-	padding: 10px 0; /* Add some padding */
-	z-index: 999; /* Ensure it's above other content but below the overlaying bottom app bar */
+	position: fixed;
+	bottom: 70px;
+	width: 101%;
+	margin: 0 auto;
+	padding: 10px 0;
+	z-index: 999;
 	max-width: 500px;
 	bottom: 110px;
+	width: 89vw;
+	margin: 0 auto;
+	justify-content: center;
 }
 
 .c-searchbox {
 	width: 90vw; /* You may want to adjust this to less than 100% to give some padding */
 	max-width: 500px; /* Adjust as needed */
 	margin: 0 auto; /* This will center the search box */
+}
+body {
+	background-color: var(--background-color);
+	color: var(--text-color);
+	font-family: Arial, sans-serif;
+	padding: 20px;
+}
+
+#searchQuery {
+	background-color: var(--container-background-color);
+	color: var(--text-color);
+	width: calc(100% - 120px);
+	padding: 10px;
+	margin-right: 5px;
+	border-radius: 4px;
+	box-shadow: 0 2px 8px var(--box-shadow-color);
+	border: 0px;
+}
+
+#searchButton {
+	/* background-color: var(--button-background-color); */
+	color: white;
+	padding: 10px;
+	border: none;
+	border-radius: 4px;
+	cursor: pointer;
+}
+
+#searchButton:hover {
+	background-color: var(--button-hover-background-color);
+}
+
+.book {
+	background-color: var(--container-background-color);
+	color: var(--text-color);
+	padding: 15px;
+	margin-bottom: 20px;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px var(--box-shadow-color);
+}
+
+.rating-section {
+	background-color: var(--rating-background-color);
+	padding: 10px;
+	border-radius: 4px;
+	margin-top: 10px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.rating-section button {
+	background-color: var(--rating-button-background-color);
+	color: white;
+}
+
+.rating-section button:hover {
+	background-color: var(--rating-button-hover-background-color);
+}
+
+.more-info-link {
+	background-color: var(--more-info-link-background-color);
+	color: white;
+}
+
+.more-info-link:hover {
+	background-color: var(--more-info-link-hover-background-color);
 }
