--- a/templates/history.html
+++ b/templates/history.html
@@ -49,9 +49,26 @@
 		</div>
 		<script>
 			function redirect(page) {
-				window.location
-					? (window.location.href = `/${page}`)
-					: window.location.replace(`/${page}`);
+				if (page === 'logout') {
+					Swal.fire({
+						title: 'Are you sure?',
+						text: 'You will be logged out',
+						icon: 'warning',
+						showCancelButton: true,
+						confirmButtonColor: '#3085d6',
+						cancelButtonColor: '#d33',
+						confirmButtonText: 'Yes, log me out!',
+					}).then((result) => {
+						if (result.isConfirmed) {
+							window.location.replace('/logout');
+						}
+					});
+					return;
+				} else {
+					window.location
+						? (window.location.href = `/${page}`)
+						: window.location.replace(`/${page}`);
+				}
 			}
 			function togglePopup() {
 				var popup = document.getElementById('profile-popup');
