--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
 		<title>Login</title>
+		<link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
 		<link
 			href="/static/login/login.css"
 			rel="stylesheet"
