--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -6,6 +6,7 @@
 			name="viewport"
 			content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
 		<title>Book predictions</title>
+		<link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
 		<link
 			href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
 			rel="stylesheet" />
