migrated to firebase

--- a/templates/history.html
+++ b/templates/history.html
@@ -9,6 +9,8 @@
 			rel="stylesheet" />
 		<link rel="stylesheet" href="/static/main/app.css" />
 		<link rel="stylesheet" href="/static/history/main.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
+		<script src="/static/general.js"></script>
 	</head>
 	<body>
 		<div class="container">
