--- a/templates/profile.html
+++ b/templates/profile.html
@@ -12,7 +12,7 @@
 		<link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
 		<link rel="stylesheet" href="/static/main/app.css" />
 		<link rel="stylesheet" href="/static/profile/main.css" />
-		<style></style>
+		<script src="/static/general.js"></script>
 	</head>
 	<body>
 		<div class="container mt-3 book-container">
