--- a/templates/search.html
+++ b/templates/search.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="@sweetalert2/theme-dark/dark.css" />
 		<link rel="stylesheet" href="/static/main/app.css" />
 		<link rel="stylesheet" href="/static/search/main.css" />
+		<script src="/static/general.js"></script>
 	</head>
 	<body>
 		<div class="c-searchbox">
