--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,11 @@
 			rel="stylesheet"
 			type="text/css"
 			data-preload="true" />
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-app.js"></script>
+		<!-- Add Firebase products that you want to use -->
+		<script src="https://www.gstatic.com/firebasejs/8.0.0/firebase-auth.js"></script>
+		<script src="/static/general.js"></script>
 	</head>
 	<body>
 		<div class="o-container">
