--- a/templates/prediction.html
+++ b/templates/prediction.html
@@ -12,6 +12,7 @@
 			rel="stylesheet" />
 		<link rel="stylesheet" href="/static/main/main.css" />
 		<link rel="stylesheet" href="/static/main/app.css" />
+		<script src="/static/general.js"></script>
 	</head>
 	<body>
 		<div id="sidebar" class="sidebar">
